# nexa-dir

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  THIRD-PARTY-NOTICES.md
.claude/: settings.json
app/: README.md
core/: Cargo.toml  deny.toml
core/crates/nexa-core/: Cargo.toml
core/crates/nexa-core/src/: lib.rs
core/crates/nexa-interop/: Cargo.toml
core/crates/nexa-interop/src/: lib.rs
core/crates/nexa-tree/src/: lib.rs
core/crates/nexa-vfs/: Cargo.toml
core/crates/nexa-vfs/src/: lib.rs
docs/: 00-vision.md  01-architecture.md  02-roadmap.md  03-features.md  04-trends-todo.md  05-requirements.md  06-adr-0001-stack.md  07-flagship-tree-multiselect.md  08-competitive-feature-survey.md  09-plugin-architecture.md  10-decision-record.md  11-dev-environment.md  12-packaging-portable.md  13-licensing.md  14-context-sharing.md  15-dev-methodology.md  16-project-structure.md  17-licensing-activation.md  18-build-and-test.md  19-implemented-features.md  20-ui-layout.md  21-adr-0002-fileview-control.md  22-adr-0003-view-and-panel-modules.md  23-column-system.md  24-search-everything.md  25-bulk-rename.md  26-command-palette.md  27-pathbar-component.md  28-startup-memory-optimization.md  28-window-session-restore.md  29-adr-0004-core-tree-model.md  30-glossary.md  31-scroll-into-view-notes.md  32-typeahead-find.md  33-file-ops-dnd-design.md  34-settings-and-session-persistence.md  35-preview-system.md  36-plugin-development.md  37-terminal.md  38-adr-0005-shell-context-menu.md  (+15 more)
scripts/: bootstrap.ps1  bootstrap.sh  make-app-icon.ps1  make-portable.ps1  (+2 more)
(+175 files in other folders)
